fixed color-contrast issue with cta buttons on homepage

--- a/public/css/utils.css
+++ b/public/css/utils.css
@@ -30,7 +30,7 @@
   user-select: none;
   padding: 0.75rem 1.75rem;
   background-color: var(--color-accent);
-  color: var(--color-white);
+  color: var(--color-accent-invert);
   font-weight: bold;
   border: 2px solid transparent;
   border-radius: var(--border-radius);
@@ -44,7 +44,7 @@
 }
 
 .button:visited {
-  color: var(--color-white);
+  color: var(--color-accent-invert);
 }
 
 .button:hover {
